Fix Stream.collect(Collectors.toList()) for ScrapingServiceImpl class